2010-05-23  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* flumotion/admin/gtk/connections.py:
	We have RecentConnection objects in the model containing the connection
	information as attributes. Pick only the first column and compare the
	text with the manager attribute.
	Fixes #1421

2010-05-20  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* flumotion/component/feedcomponent.py:
	Add missing parameter to event probe

2010-05-19  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* flumotion/component/feedcomponent.py:
	We cannot link pads with this return statement here. Delete it and
	remember to check the code before commiting.

2010-05-19  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* Makefile.am:
	Add .version to the tarball

2010-05-18  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* flumotion/component/decoders/generic (svn:ignore):
	* flumotion/component/decoders (svn:ignore):
	Ignore files on newly created directories

2010-05-18  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	reviewed by: Xavier Martinez-Hidalgo

	* configure.ac:
	* flumotion/component/Makefile.am:
	* flumotion/component/decoders (added):
	* flumotion/component/decoders/__init__.py (added):
	* flumotion/component/decoders/decoders.xml (added):
	* flumotion/component/decoders/Makefile.am (added):
	* flumotion/component/decoders/generic (added):
	* flumotion/component/decoders/generic/generic.py (added):
	* flumotion/component/decoders/generic/__init__.py (added):
	* flumotion/component/decoders/generic/Makefile.am (added):
	* flumotion/component/decoders/generic/generic.xml (added):
	Add the generic decoder component (based on sebastien's branch) which
	can decode audio and video from an encoded stream and is aware of
	changes on upstream components.
	* flumotion/component/feedcomponent.py:
	Base class for the decoder component that contains the gstreamer bits

2010-05-18  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* flumotion/test/test_component_feedcomponent.py: