@@ -1,3 +1,14 @@
+2010-05-25  Xavier Martinez-Hidalgo  <xmartinez@flumotion.com>
+
+	reviewed by: Sébastien Merle and Julien Le Goff
+
+	* flumotion/component/misc/httpserver/cachedprovider.py:
+	* flumotion/test/test_component_providers.py:
+	Open and stat cachedprovider source file in a separate thread, as
+	it is usually located in a network mount and would block the
+	reactor, otherwise.
+	Closes #1419.
+
 2010-05-23  Xavier Queralt Mateu  <xqueralt@flumotion.com>
 
 	* flumotion/admin/gtk/connections.py:
